# token-saver-loop

./: .gitignore  CODEX_CONTINUE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  KIMI_CODEX_LOOP.md  KIMI_NEXT_TASK.md  LICENSE  README.en.md  README.ja.md  README.ko.md  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.ai/active_task/: capability_notes.md  codex_plan.md  context_pack.md  gpt_command.md  progress.md  state.md  task.md
.ai/metrics/: token_usage.jsonl
.ai/retros/: retro_004_micro.json  retro_004_micro.md  retro_008_micro.json  retro_008_micro.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.kimi-code/skills/kimi-codex-worker/: SKILL.md
docs/: AGENT_CONTEXT.md  BEGINNER_GUIDE.md  GITHUB_PROMOTION_KIT.md  IMPLEMENTATION_OPTIONS.md  INSTALL_DRY_RUN_CRITERIA.md  KIMI_TOKEN_USAGE_RESEARCH.md  PRODUCT_BRIEF.md  PRODUCT_LAUNCH_EVENT.md  RELEASE_1_0_CHECKLIST.md  REPO_MAP.md
docs/assets/: demo-loop-animation.html
docs/releases/: v1.08.md
examples/: bugfix-loop.md  codex-worker-round.md  docs-i18n-loop.md  minimal-task.md
portable/kimi-codex-kit/: .gitignore  CODEX_CONTINUE.md  KIMI_CODEX_LOOP.md  KIMI_NEXT_TASK.md  README.md  START_HERE.md
portable/kimi-codex-kit/skills/: kimi-codex-worker.md
portable/kimi-codex-kit/tools/: ai-kimi-init.ps1  ai-kimi-review-pack.ps1  ai-kimi-run.ps1  (+1 more)
portable/token-saver-kit/: LATEST_WORKER_PROMPT.md  README.md  REVIEWER_CONTINUE.md  START_HERE.md  TOKEN_SAVER_LOOP.md  WORKER_NEXT_TASK.md
scripts/: render_demo_gif.py
src/gpt2whatever/: __init__.py  cli.py  core.py
src/token_saver_loop/: __init__.py  cli.py  core.py  templates.py
tests/: __init__.py  test_cli.py  test_core.py
tools/: ai-kimi-init.ps1  ai-kimi-review-pack.ps1  ai-kimi-run.ps1  ai-kimi-verdict.ps1  查看kimitoken.txt
(+126 files in other folders)
