[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gpt2whatever"
version = "1.0.0"
description = "Portable Kimi-Codex workflow kit for any project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
keywords = ["codex", "kimi", "workflow", "automation", "cli"]

[project.scripts]
gpt2whatever = "gpt2whatever.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
