[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "token-saver-loop"
version = "1.0.6"
description = "Token-saving model handoff loop for AI-assisted development"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
keywords = ["token-saver", "model-handoff", "workflow", "automation", "cli"]
license = "MIT"

[project.scripts]
token-saver-loop = "token_saver_loop.cli:main"

[tool.setuptools.packages.find]
where = ["src"]



